# rmus

./: Cargo.toml  README.md  config.json
src/: config.rs  main.rs  render.rs  resource.txt  state.rs  tui.rs  utils.rs
src/Resource/: resource.txt
