[package]
name = "rmus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
rusty-chromaprint = "0.2.0"
serde = "1.0.200"
symphonia = "0.5.4"
