[package]
name = "rmus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
rusty-chromaprint = "0.2.0"
symphonia = "0.5.4"
serde_json = "1.0"
futures = "0.3.30"
rodio = "0.18.0"
cpal = "0.15.3"